--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -73,14 +73,16 @@
 
 
 .design-element {
-    .animation-wrapper { height: 400px;
+    .animation-wrapper { height: 450px;
         .flying-saucer-container { width: 100%; height: 100%;
             .flying-saucer { width: 255px; margin-top: 190px; margin-bottom: -30px; position: absolute; left: -320px;
+                @media(min-width: 1600px) { margin-top: 280px; }
                 @media(min-width: $breakpoint-desktop) { width: 295px; left: -350px; }
-                @media(max-width: $breakpoint-phone) { width: 230px;  margin-top: 180px; margin-bottom: 0; left: -300px; }
+                @media(max-width: $breakpoint-phone) { width: 230px;  margin-top: 180px; left: -300px; }
             }
         }
-        @media(max-width: $breakpoint-phone) { height: 380px; }
+        @media(min-width: 1600px) { height: 575px; }
+        @media(max-width: $breakpoint-phone) { height: 550px; }
     }
 }
 
